--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "mini-css-extract-plugin": "^2.9.1",
     "node-sass": "^9.0.0",
     "sass-loader": "^16.0.1",
@@ -35,5 +37,8 @@
     "workbox-webpack-plugin": "^7.1.0"
   },
   "keywords": [],
-  "description": ""
+  "description": "",
+  "jest": {
+    "testEnvironment": "jsdom"
+  }
 }
